# CockpitMJC

./: .gitignore  CMakeLists.txt  Kconfig  README.md  prj.conf  west.yml
app/: CMakeLists.txt  debug.conf  prj.conf
app/src/: main.c
boards/arm/semihalfino/: Kconfig.defconfig  Kconfig.semihalfino  board.yml  semihalfino-pinctrl.dtsi  semihalfino.dts  semihalfino.yaml  semihalfino_defconfig
drivers/: CMakeLists.txt  Kconfig
drivers/display/: CMakeLists.txt  Kconfig  Kconfig.led_multiplex_matrix  display_led_multiplex_matrix.c
drivers/gpio/: CMakeLists.txt  Kconfig
dts/bindings/display/: led-multiplex-matrix.yml
src/: main.c
